--- a/ejercicio1-html-y-css/index.html
+++ b/ejercicio1-html-y-css/index.html
@@ -7,6 +7,19 @@
   <title>Mi Receta</title>
 </head>
 <body>
-  
+  <ol>
+    <li>
+      <span>
+        <strong>
+          Item
+        </strong>
+      </span>
+    </li>
+    <li>OTRO ITEM</li>
+  </ol>
+  <ul>
+    <li>ITEM</li>
+    <li>OTRO ITEM</li>
+  </ul>
 </body>
 </html>
